# vector-db

./: Exercise 1 - Basic Vector Search.ipynb  Exercise 2 - Embedding Functions.ipynb  Exercise 3 - Vector Database Basics.ipynb  Exercise 5 - Multimodal Search.ipynb  README.md
advanced_vector_opns/: Exercise 4 - Simple Recommender.ipynb
basic_vector_search/: Exercise 1 - Basic Vector Search.ipynb
embedding_functions/: Exercise 2 - Embedding Functions.ipynb
multimodal_search/: Exercise 5 - Multimodal Search.ipynb
vector-db-env/: pyproject.toml
vector_db/: Exercise 3 - Vector Database Basics.ipynb
